# tobi-models

./: .gitignore  .gitmodules  download-dataset.sh  pyproject.toml  setup-circom.sh
.devcontainer/: devcontainer.json
models/: age.py  age_garbage.h5  age_garbage.json  generate.py  in.json
models/output/: circuit.json
