[tool.poetry]
name = "ml-keras"
version = "0.1.0"
description = ""
authors = ["kidneyweakx <kidneyweaks@gmail.com>"]
readme = "README.md"
packages = [{include = "ml_keras"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
tensorflow = "2.10.0"
matplotlib = "^3.7.2"
pandas = "^2.0.3"
gdown = "^4.7.1"
docopt = "0.6.2"
pillow = "^10.0.0"
scikit-learn = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
